[metadata]
name = seizurecast-pkg-YLIN
author = Yanxian Lin
author_email = yanxian00@gmail.com 
description = A package for SeizureCast 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ylin00/seizurecast
project_urls =
    Bug Tracker = https://github.com/ylin00/seizurecast/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
